# surface-audit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: README.md  run.py
docs/: ARCHITECTURE.md  INSTALL.md  RECIPES.md  RELEASE.md  SCHEMA.md  USAGE.md
docs/site/: index.html
docs/site/assets/: site.css
docs/site/samples/: preview-report.console.txt  preview-report.html  preview-report.sarif.json
examples/: basic_usage.py  surface-audit.toml
examples/plugin-template/: README.md  pyproject.toml
examples/plugin-template/src/surface_audit_header_check/: __init__.py  checks.py
examples/plugin-template/tests/: test_header_check.py
schemas/: report.schema.json
src/surface_audit/: __init__.py  __main__.py  cli.py  client.py  config.py  diff.py  exceptions.py  mcp_server.py  models.py  scanner.py  scope.py
src/surface_audit/checks/: __init__.py  authentication.py  base.py  cors.py  cross_origin_isolation.py  csrf.py  directory_listing.py  https_redirect.py  misconfiguration.py  open_redirect.py  security_headers.py  security_txt.py  sql_injection.py  ssl_tls.py  xss.py
src/surface_audit/reporting/: __init__.py  base.py  console.py  html.py  json.py  markdown.py  sarif.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_diff.py  test_docs_links.py  test_mcp_server.py  test_models.py  test_plugin_loading.py  test_reporter.py  test_reporting_console.py  test_reporting_discovery.py  test_reporting_markdown.py  test_scanner.py  test_scanner_config.py  test_schema.py  test_scope.py
tests/checks/: test_authentication.py  test_base.py  test_cors.py  test_cross_origin_isolation.py  test_csrf.py  test_directory_listing.py  test_https_redirect.py  test_misconfiguration.py  test_network_errors.py  test_open_redirect.py  test_security_headers.py  test_security_txt.py  test_sql_injection.py  test_ssl_tls.py  test_xss.py
