[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "surface-audit"
version = "1.0.1"
description = "Modular async web-application security surface auditor with pluggable checks, MCP support, and CI-friendly reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Uğur Kontel" }]
keywords = [
    "security",
    "scanner",
    "surface-audit",
    "web-security",
    "appsec",
    "posture",
    "security-headers",
    "csp",
    "hsts",
    "cors",
    "sarif",
    "mcp",
    "vulnerability",
    "pentest",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "rich>=13.7",
    "typer>=0.12",
    "tomli>=2.0 ; python_version < '3.11'",
    "typing-extensions>=4.10 ; python_version < '3.11'",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.12,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "jsonschema>=4.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "mcp>=1.12,<2.0",
]

[project.scripts]
surface-audit = "surface_audit.cli:app"

# Third-party report renderers register themselves under the group below.
# The package itself ships its built-in renderers via side-effect imports
# inside surface_audit.reporting, so this table is intentionally empty.
[project.entry-points."surface_audit.renderers"]

[project.entry-points."surface_audit.checks"]
security_headers = "surface_audit.checks.security_headers:SecurityHeadersCheck"
ssl_tls = "surface_audit.checks.ssl_tls:SSLTLSCheck"
https_redirect = "surface_audit.checks.https_redirect:HTTPSRedirectCheck"
xss_reflection = "surface_audit.checks.xss:ReflectedXSSCheck"
sql_injection = "surface_audit.checks.sql_injection:SQLInjectionCheck"
csrf = "surface_audit.checks.csrf:CSRFCheck"
authentication = "surface_audit.checks.authentication:AuthenticationCheck"
misconfiguration = "surface_audit.checks.misconfiguration:MisconfigurationCheck"
directory_listing = "surface_audit.checks.directory_listing:DirectoryListingCheck"
cors = "surface_audit.checks.cors:CORSCheck"
security_txt = "surface_audit.checks.security_txt:SecurityTxtCheck"
cross_origin_isolation = "surface_audit.checks.cross_origin_isolation:CrossOriginIsolationCheck"
open_redirect = "surface_audit.checks.open_redirect:OpenRedirectCheck"

[project.urls]
Homepage = "https://dev-ugurkontel.github.io/surface-audit/"
Repository = "https://github.com/dev-ugurkontel/surface-audit"
Issues = "https://github.com/dev-ugurkontel/surface-audit/issues"
Documentation = "https://dev-ugurkontel.github.io/surface-audit/"
Discussions = "https://github.com/dev-ugurkontel/surface-audit/discussions"
Support = "https://github.com/dev-ugurkontel/surface-audit/blob/main/SUPPORT.md"
Changelog = "https://github.com/dev-ugurkontel/surface-audit/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/dev-ugurkontel"

[tool.hatch.build.targets.wheel]
packages = ["src/surface_audit"]

[tool.hatch.build.targets.wheel.force-include]
"src/surface_audit/py.typed" = "surface_audit/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "B",               # flake8-bugbear
    "UP",              # pyupgrade
    "SIM",             # flake8-simplify
    "RUF",             # ruff-specific
    "TCH",             # type-checking imports
    "PTH",             # use pathlib
    "ARG",             # unused arguments
    "S",               # bandit security
    "N",               # pep8-naming
    "C4",              # comprehensions
]
ignore = [
    "S101",   # assert in tests
    "S603",   # subprocess call — we don't use subprocess
    "E501",   # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tomllib", "tomli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=surface_audit",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # asyncio leaks its self-pipe socket at interpreter shutdown; not our bug.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["surface_audit"]
omit = ["src/surface_audit/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
# Production code does not use `assert` for enforcement; tests live under
# exclude_dirs, so B101 would never trigger either way. Kept as an explicit
# no-op to signal the policy to human reviewers.
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]
